--- a/index.qmd
+++ b/index.qmd
@@ -6,7 +6,7 @@ page-layout: article
 # Zihan (Zoe) Tang
 *PhD Student in Accounting, University of Minnesota — Carlson School of Management*
 
-Primarily, my research examines how **new accounting standards and regulations** shape **firms’** and **investors’** decisions. More broadly, I study **financial institutions, risk management, and corporate governance**. I am also enthusiastic about applying **new technologies—such as large language models (LLMs) and AI—to accounting research**.
+I study how new accounting rules shape real decisions, with broader interests in financial institutions, risk management, and governance—and I apply LLMs/AI where they add leverage.
 
 - **Email:** tang0832@umn.edu  
 - **GitHub:** <https://github.com/ZoeTang12>  
