--- a/index.qmd
+++ b/index.qmd
@@ -2,16 +2,21 @@
 title: "Home"
 page-layout: article
 ---
+<div style="display:flex; align-items:center; gap:18px; margin:10px 0 6px 0;">
+  <img src="headshot.jpg" alt="Zoe Tang" style="width:96px;height:96px; border-radius:50%; object-fit:cover; box-shadow:0 4px 14px rgba(0,0,0,.12);" />
+  <div>
+    <h1 style="margin:0;">Zihan (Zoe) Tang</h1>
+    <em>PhD Student in Accounting, University of Minnesota — Carlson School of Management</em>
+  </div>
+</div>
 
-# Zihan (Zoe) Tang
-*PhD Student in Accounting, University of Minnesota — Carlson School of Management*
 
 I study how new accounting rules shape real decisions, with broader interests in financial institutions, risk management, and governance—and I apply LLMs/AI where they add leverage.
 
 - **Email:** tang0832@umn.edu  
 - **GitHub:** <https://github.com/ZoeTang12>  
 - **LinkedIn:** <https://www.linkedin.com/in/zihan-tang-972ba1220/>  
-- **CV (PDF):** <CV_Zihan_Tang.pdf>
+
 
 ## Selected Projects
 
