--- a/index.qmd
+++ b/index.qmd
@@ -2,13 +2,13 @@
 title: "Home"
 page-layout: article
 ---
-<div style="display:flex; align-items:center; gap:18px; margin:10px 0 6px 0;">
+<div class="hero" markdown="1" style="display:flex; align-items:center; gap:18px; margin:10px 0 6px 0;">
   <img src="headshot.jpg" alt="Zoe Tang" style="width:96px;height:96px; border-radius:50%; object-fit:cover; box-shadow:0 4px 14px rgba(0,0,0,.12);" />
-  <div>
-    <h1 style="margin:0;">Zihan (Zoe) Tang</h1>
-    <em>PhD Student in Accounting, University of Minnesota — Carlson School of Management</em>
-  </div>
+  
+  ### Zihan (Zoe) Tang
+  *PhD Student in Accounting, University of Minnesota — Carlson School of Management*
 </div>
+
 
 
 I study how new accounting rules shape real decisions, with broader interests in financial institutions, risk management, and governance—and I apply LLMs/AI where they add leverage.
@@ -16,6 +16,17 @@ I study how new accounting rules shape real decisions, with broader interests in
 - **Email:** tang0832@umn.edu  
 - **GitHub:** <https://github.com/ZoeTang12>  
 - **LinkedIn:** <https://www.linkedin.com/in/zihan-tang-972ba1220/>  
+
+## Education
+
+- **Ph.D. in Accounting**, University of Minnesota – Carlson School of Management  
+  *Jan 2024 – Present* 
+
+- **Master in Financial Engineering**, École Polytechnique Fédérale de Lausanne (EPFL)  
+  *Sep 2021 – Aug 2023* 
+
+- **Honors Bachelor of Mathematics**, University of Waterloo  
+  *Sep 2018 – Aug 2021* · Major: **Mathematical Finance & Statistics** 
 
 
 ## Selected Projects
