--- a/index.qmd
+++ b/index.qmd
@@ -2,12 +2,15 @@
 title: "Home"
 page-layout: article
 ---
-<div class="hero" markdown="1" style="display:flex; align-items:center; gap:18px; margin:10px 0 6px 0;">
-  <img src="headshot.jpg" alt="Zoe Tang" style="width:96px;height:96px; border-radius:50%; object-fit:cover; box-shadow:0 4px 14px rgba(0,0,0,.12);" />
-  
-  ### Zihan (Zoe) Tang
-  *PhD Student in Accounting, University of Minnesota — Carlson School of Management*
+<div class="hero" style="display:flex; align-items:center; gap:18px; margin:10px 0 6px 0;">
+  <img src="headshot.jpg" alt="Zoe Tang"
+       style="width:96px;height:96px; border-radius:50%; object-fit:cover; box-shadow:0 4px 14px rgba(0,0,0,.12);" />
+  <div>
+    <h3 style="margin:0;">Zihan (Zoe) Tang</h3>
+    <p><em>PhD Student in Accounting, University of Minnesota — Carlson School of Management</em></p>
+  </div>
 </div>
+
 
 
 
