--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,12 @@
 ---
-title: "Home - Zihan Tang"
+title: "Hello, I'm Zihan Tang"
 page-layout: article
 ---
 <div class="hero" markdown="1" style="display:flex; align-items:center; gap:18px; margin:10px 0 6px 0;"> <img src="headshot.jpg" alt="Zoe Tang" style="width:96px;height:96px; border-radius:50%; object-fit:cover; box-shadow:0 4px 14px rgba(0,0,0,.12);" />  </div>
 
 
-I am a second year PhD Student in Accounting, University of Minnesota — Carlson School of Management. I study how new accounting rules shape real decisions, with broader interests in financial institutions, risk management, and governance.
+- I am a second year PhD Student in Accounting at University of Minnesota Carlson School of Management. 
+- I study how new accounting rules shape real decisions, with broader interests in financial institutions, risk management, and governance.
 
 - **Email:** tang0832@umn.edu  
 - **GitHub:** <https://github.com/ZoeTang12>  
